testsuite/tests/typecheck/should_fail/tcfail004.stderr

tcfail004.hs:3:9: error:
    • Couldn't match expected type ‘(r, r1)’
                  with actual type ‘(Integer, Integer, Integer)’
    • In the expression: (1, 2, 3)
      In a pattern binding: (f, g) = (1, 2, 3)
    • Relevant bindings include
        f :: r (bound at tcfail004.hs:3:2)
        g :: r1 (bound at tcfail004.hs:3:4)
